# brain-mri-segmentation

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  dataset.py  inference.py  losses.py  metrics.py  model.py  train.py  transforms.py  utils.py  visualize.py
