[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-mri-segmentation"
version = "0.1.0"
description = "Professional deep learning project scaffold for brain MRI segmentation with PyTorch and MONAI"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]
